force-app/main/default/objects/SurveyMaster__c/SurveyMaster__c.object-meta.xml
<CustomObject>
    <label>Survey Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Master</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>