force-app/main/default/objects/SurveyMaster__c/fields/Additional_Feedback_Required_11__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_Required_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Feedback Required #11</label>
    <type>Checkbox</type>
</CustomField>