force-app/main/default/objects/SurveyMaster__c/fields/Answer10_1__c.field-meta.xml
<CustomField>
    <fullName>Answer10_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer10-1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>