force-app/main/default/objects/SurveyMaster__c/fields/Answer11_1__c.field-meta.xml
<CustomField>
    <fullName>Answer11_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer11-1</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>