force-app/main/default/objects/SurveyMaster__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Survey Master</relationshipLabel>
    <relationshipName>Survey_Master</relationshipName>
    <type>Lookup</type>
</CustomField>