force-app/main/default/objects/SurveyMaster__c/fields/No_of_Completed_Surveys__c.field-meta.xml
<CustomField>
    <fullName>No_of_Completed_Surveys__c</fullName>
    <label>No. of Completed Surveys</label>
    <summaryFilterItems>
        <field>Survey__c.Result__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey__c.SurveyMaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>