force-app/main/default/objects/SurveyMaster__c/fields/No_of_Surveys__c.field-meta.xml
<CustomField>
    <fullName>No_of_Surveys__c</fullName>
    <description>Number of surveys created for the survey master</description>
    <label>No. of Surveys</label>
    <summaryForeignKey>Survey__c.SurveyMaster__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>