force-app/main/default/objects/SurveyMaster__c/fields/Question12__c.field-meta.xml
<CustomField>
    <fullName>Question12__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question #12</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>