force-app/main/default/objects/SurveyMaster__c/fields/Question13__c.field-meta.xml
<CustomField>
    <fullName>Question13__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question #13</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>