force-app/main/default/objects/SurveyMaster__c/fields/Question15__c.field-meta.xml
<CustomField>
    <fullName>Question15__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question #15</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>