force-app/main/default/objects/SurveyMaster__c/fields/Question_Type_11__c.field-meta.xml
<CustomField>
    <fullName>Question_Type_11__c</fullName>
    <label>Question Type #11</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Check box</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multi picklist</fullName>
            </value>
            <value>
                <fullName>Rating (0-10)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>