force-app/main/default/objects/SurveyMaster__c/fields/Uniquesurveyname__c.field-meta.xml
<CustomField>
    <fullName>Uniquesurveyname__c</fullName>
    <description>for check survey name, not allow to user duplicate value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unique_surveyname</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>